--- a/gb/25/6/27/n14540039.md
+++ b/gb/25/6/27/n14540039.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>英国与欧盟达成直布罗陀边检协议</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/06/id14540040-GettyImages-1326806571-600x400.jpg" />
-<h6>直布罗陀是英国在欧洲大陆的唯一一块领土，标志是直布罗陀巨岩。（Carlos Gil/Getty Images)
-</h6>
+<h6>直布罗陀是英国在欧洲大陆的唯一一块领土，标志是直布罗陀巨岩。（Carlos Gil/Getty Images)</h6>
 <hr>
 <p>【大纪元2025年06月27日讯】（大纪元英国记者站报导）近日，英国与欧盟就直布罗陀的边境检查问题达成协议。从陆路进入的旅客无需进行检查，而乘飞机抵达的旅客需要进行两次检查。</p>
 <p>英国和欧盟都对此协议表示欢迎，因为这一“流动边境”协议为英国与欧盟达成脱欧后协议铺平了道路。</p>
@@ -22,39 +21,33 @@
 <p>拉米还澄清，英国没打算让直布罗陀加入欧洲申根自由旅行区。◇</p>
 <p>责任编辑：陈彬</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/22/n14515784.md#1">英国向毛里求斯移交争议群岛主权</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/27/n14518711.md#1">英国议员访台 林佳龙感谢英国为台发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/29/n14520483.md#1">英国政府借款超预期 财政大臣压力大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/29/n14520486.md#1">英国交还查戈斯群岛 反对党大呼赔本</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/2/n14522439.md#1">英国扩建潜艇舰队 全面加强战备与核威慑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/5/n14525213.md#1">英国计划投入200亿镑改善国防 应对中俄威胁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/5/n14525241.md#1">英国政府出售所有股份 NatWest银行回归私有</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540034.md#1">中共考虑取消制裁 英国议员担心附加条件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540037.md#1">学费增值税 英国私立学校打输官司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540042.md#1">英国River Island服装连锁店计划关闭33间门店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/4/n9225929.md#1" target="_blank">对中国法轮功学员被迫害的调查（1）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520991.md#1">【古道人生】善恶有报 报答来自另外空间 报答来自二十年后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539555.md#1">【直播】川普出席《大而美法案》相关活动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539509.md#1">【直播】皮戈特主持国务院简报会（6/26）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538780.md#1">【百年真相】豪车别墅 华西“第一村”破灭真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537991.md#1">一线白酒遇冷 千元系列茅台“卖一瓶亏一瓶”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538134.md#1">极速充电电池问世 电动车充满电仅18秒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538094.md#1">消息指习首度缺席金砖峰会 引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538624.md#1">《名侦探柯南 独眼的残像》影评：毛利小五郎大出风头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539072.md#1">《F1电影》制作成本高 全球首映票房预测出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538823.md#1">成本过亿 小沈阳新片上映3天票房仅7.6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538690.md#1">7种过期调味品千万别吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538188.md#1">夏天在花园里用这一物 可赶走恼人的蚊子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537581.md#1">什么是FOMO？ 为何这种习惯具有破坏力？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535849.md#1">改善前列腺肥大与尿频 教你食疗按摩及运动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536578.md#1">心血管最爱运动——循环系统伸展操</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/26/n13810988.md#1">【舞蹈】中国古典舞技术技巧第六集：探海</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688392.md#1">【时政春秋】川普重兵云集中东 盘点美军战力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687003.md#1">【独家】张又侠等军头和习矛盾激烈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687419.md#1">【独家】张又侠落马 军方启动临战状态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686742.md#1">中国转为零工经济国 民众挣扎求生存</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686678.md#1">使用气炸锅最常犯的几个错误 你可能不知道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/6/27/n14540039.htm">英国与欧盟达成直布罗陀边检协议</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540039.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
